[package]
name = "ccyaa_order_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
csv = "1.1.6"
gcp_auth = "0.7.3"
tokio = { version = "1.21.0", features = ["full"] }
substring = "1.4.5"
clap = { version = "4.0.26", features = ["derive"] }
serde_path_to_error = "0.1.9"
